--- a/src/main/resources/archetype-resources/src/main/webapp/template/template.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/template/template.xhtml
@@ -26,7 +26,7 @@
 
 		<!-- SB Admin CSS - Include with every page -->
 		<link href="../css/sb-admin.css" rel="stylesheet" />
-		<link href="../css/${artifactId}.min.css" rel="stylesheet" />
+		<link href="../css/esqueleto.min.css" rel="stylesheet" />
 	</h:head>
 
 	<h:body>
